--- a/Human right and laws/CH11  权利与功利.md
+++ b/Human right and laws/CH11  权利与功利.md
@@ -26,7 +26,7 @@
 
 ![An Introduction to the Principles of Morals and Legislation](https://m.media-amazon.com/images/I/61iEKD22niL.jpg)
 
-> *道德与立法原理导论*
+> *道德与立法原理导论* 前四章
 
 该书是易读的, 因为作者边沁认为著书也需要遵循着 **功利主义** 的目的, 要让它花费最短的时间就可以得到最高的收获
 
@@ -46,9 +46,11 @@
 
 **社会功利主义** 是指: "当一项行动增大共同体幸福的倾向大于它减小这一幸福的倾向时, 它就可以说是符合功利原理, 或简言之, 符合功利. 同样地, 当一项政府措施(这只是一种特殊的行动, 由特殊的人去做)之增大共同体幸福的倾向大于它减小这一幸福的倾向时, 它就可以说是符合或服从功利原理. " 
 
-> 没有任何的行为是有完全的 "善", 所以需要权衡利弊, 选择最大化幸福的行为
+> 个人功利主义可以为个人的行为提供指南, 但是边沁的论述的重点在于社会功利主义. 
 > 
-> 目的: 获得的部分大于减少的幸福的部分
+> 没有任何的行为是有完全的 "善", 所以需要权衡利弊, 选择最大化幸福的行为. 
+> 
+> 目的: 获得的部分大于减少的幸福的部分. 
 
 ---
 
@@ -56,29 +58,46 @@
 
 > 两个 "最大", 最大多数, 最大幸福
 >
+> > **两个最大**: 
+> > 
+> > 某项政策能不能惠及最大多数人, 
+> > 
+> > 在惠及最大多数人的前提下, 能不能促进最大多数人的最大幸福, 最大程度地提高人民的幸福的指数. 
+>
 > 边沁: "我实在想不到政府的任何其他的正确和正当的目的"
 
 ## 1.1. 什么是共同体? 
 
 "共同体是个虚构体, 由那些被认为构成其成员的个人组成. 那么, 共同体的利益是什么呢?是组成共同体的若干成员的利益总和. "
 
+> **聚合体**
+> 
 > 共同体的利益应该可以还原到个人中来
 >
+> ⬇
+> 
 > 共同体的利益等于个人利益的总和
 >
-> 边沁反对: 神秘主义的共同体的利益, 不能还原为个人利益的共同体的利益是神秘主义的, 中间多出来的部分你是无法被计算的, 也是无法被证明的
+> 边沁反对: **神秘主义的共同体的利益**, 不能还原为个人利益的共同体的利益是神秘主义的, 中间多出来的部分你是无法被计算的, 也是无法被证明的
 >
-> > 边沁反对的是 "有机的共同体"
+> > 这也是实际上是一种功利主义的方式去看待共同体的利益, 排除任何不可计算的东西. 
+>
+> 边沁反对的是 "有机的共同体"
 
 如何计算共同体的利益? 边沁提出一种计算的程序. 
 1. 首先从其利益看来最直接地受该行动影响的人当中, 挑出任何一人来考察、估算: 
    - 看来由该行动最初造成的每项可辨认的快乐的值; 
+      > 最初的快乐的值
    - 看来由它最初造成的每项痛苦的值; 
+      > 最初的痛苦的值
    - 看来由它随后造成的每项快乐的值, 这构成最初快乐的丰度以及最初痛苦的不纯度; 
-        > 原来的快乐会继发别的快乐
+      > 原来的快乐会继发别的快乐
    - 看来由它随后造成的每项痛苦的值, 这构成最初痛苦的丰度以及最初快乐的不纯度; 
-        > 继发的痛苦
+      > 继发的痛苦
    - 把所有的快乐之值加在一起, 同时把所有的痛苦之值加在一起. 如果快乐的总值较大, 则差额表示行动之有关个人利益的、好的总倾向; 如果痛苦的总值较大, 则差额表示其坏的总倾向. 
+> ***总结***:
+>
+> (**最初**的快乐 - **最初**的痛苦) + (**继发**的快乐 - **继发**的痛苦) = 总的快乐的值 - 总的痛苦的值 = 总倾向
 2. 然后, 确定利益有关者的人数, 对每个人都按照上述程度估算一遍. 
    - 于是可以看到有两种人: 一种是就他而言行动的倾向总的来说是好的, 另一种是就他而言其倾向总的来说是坏的. 
    - 把表示行动之有关每个前一种人的、具有多大程度好倾向的所有数值加在一起, 同时把表示行动之有关每个后一种人的、具有多大程度坏倾向的所有数值加在一起. 
@@ -87,10 +106,13 @@
 ---
 
 $$
-\text{某项政府措施带来的共同体利益} \\
-= \sum \text{公民x} ( \text{乐} - \text{苦}) + \sum \text{公民y} ( \text{乐} - \text{苦}) \\
-x = \text{快乐值大于痛苦值的任一公民} \\
-y = \text{痛苦值大于快乐值的任一公民}
+\begin{aligned}
+&\text{某项政府措施带来的共同体利益} \\
+&= \sum \text{公民x} ( \text{乐} - \text{苦}) + \sum \text{公民y} ( \text{乐} - \text{苦}) \\
+\\
+&x = \text{快乐值大于痛苦值的任一公民} \\
+&y = \text{痛苦值大于快乐值的任一公民}
+\end{aligned}
 $$
 
 快乐的值 = 最初造成的每项快乐的值 + 随后造成的每项快乐的值. 
@@ -103,40 +125,92 @@ $$
 > - 解除痛苦的快乐
 >
 > 同时边沁认识到不同的人对于同一个东西会有不同快乐与痛苦的值
-> - 于是他将影响快乐与痛苦的值的计算的因素归纳为32点
+> - 于是他将影响快乐与痛苦的值的计算的因素归纳为32种
 
 ---
 
 通常对功利主义的两点质疑
 1. 技术问题. 
    - 测度的问题: 快乐与痛苦很难准确测度
-        > 快乐与痛苦是心灵的感受, 是难以测量的
+      > 快乐与痛苦是心灵的感受, 是难以测量的
    - 通约的问题: 不同性质的快乐和痛苦无法累加和汇总
+      > 同一个行动可能会在不同的个人身上产生不同性质的快乐
+      > 
+      > *i.e.* 
+      > 
+      > **物质** 上的快乐与 **精神** 上的快乐, 只是无法累加的
+> 但实际操作上, 认为(教授认为), 技术问题不是困难的, 难以克服的
+>
+> ### 测度的问题
+> 
+> 因为在个人行动的时候并不是以来对快乐痛苦值的预期的精准的测度, 而是依赖对不同的行动方案对快乐痛苦值得预期的比较
+> > 对于A和B两个方案的比较是依赖于快乐与痛苦值的大于还是小于的值的比较, 而不是等于的比较. 
+> > 
+> > 即: 只需要求出 **大于小于** 的问题, 而不需要求出 **等于** 的问题
+>
+> ### 通约的问题
+>
+>  因为不论是物质上的快乐还是精神上的快乐最终都还是归结到心理上的快乐
+>
+> 不论伦理上将快乐归结到 **物质上** 还是 **精神上**, 最后都会归结到 **心灵体验** 上来, 都会还原为神经认知的反应的过程. 
+>
+> > 可以看到的, 对快乐的描述是"我快乐", "我很快乐", "我非常快乐", 而不会去说 "我感受到物质上的快乐", 或者"精神上的快乐". 快乐的分类是逻辑上的分类, 是为了分析与研究它才对它进行分类的. 
+> > > 个人思考: 即使是进行了如上的"物质上的快乐"和"精神上的快乐"的描述, 也都可以用心灵体验的"我快乐"进行描述与表述
 2. 道德问题
    - 功利主义运用于实践, 会导致牺牲个体正当利益. 
+      > **这才是真正的问题所在**. 
+      > 
+      > 如果为了实现公民2到公民n的利益而去牺牲公民1的利益, 实际上是对公民1的工具化, 这就违背了把每个人看作一个平等目的的基本原理.
 
 # 2. 再访罗尔斯正义理论
+
+> 罗尔斯的正义论就是对公平效率, 正义与功利的冲突该如何解决的问题. 
 
 ## 2.1. 原处状态中的备选方案
 
 1. 第一人称的方案: 专制主义者的方案. 
-   > 人人为我, 我不为人人, 将他者作为实现我\我们的利益的方法
+   > 以"我"的利益为准则
    > 
-   > 这个方案会不会被人民所选择呢？
-   > > 人民不会选择这个方案, 因为:
-   > > - 人民不会希望自己的利益被牺牲
-   > > - 人民不会认为自己一定能成为那个第一人称者
+   > 人人为我, 我不为人人, 将他者作为实现我/我们的利益的方法
+> 这个方案会不会被人民所选择呢? 
+> 
+> **不会**
+> 
+> > 人民不会选择这个方案, 因为:
+> > - 人民不会希望自己的利益被牺牲
+> > - 人民不会认为自己一定能成为那个第一人称者(机会小)
 2. 功利主义的方案
    1. 古典功利主义
+      > 边沁就是, 追去的是最大多数人的最大幸福, 追求的是幸福的总额. 很多时候并不适当. 
+      > > 可以在不增加资源(个人的幸福), 而通过增加人数的情况下实现. 
+      > > 
+      > > 幸福的累加在基数增加, 而对个体无利甚至有害的情况下得到社会福利的增长. 
    2. 平均功利主义
-        > 正义优先于效率
-3. 自由放任主义
-   > 按照罗尔斯的观点这也没有被选中: 
-   > 
-   > 原因: 
-   > - 因为这个本质是有利于对在社会中的处于优势地位的人的利益的
-4. 两个正义原则
-   > 罗尔斯认为所有的人一致地选择了这个方案
+      > 正义优先于效率
+      > 
+      > 不是为了社会福利的最大化, 而是为了实现公民个人的最大化. 
+> 人民会选择这样的功利主义的方案吗? 
+>
+> **不会**
+>
+> > 人民不会选择给自己带来比较大的风险的方案
+> > 
+> > 因为, 不论是哪个功利主义, 最后都会造成牺牲者, 都会由道德困境(牺牲少数人的正当利益而实现全体的总体的利益的增长). 
+1. 自由放任主义
+> 人民会选择这样的方案吗?
+>
+> **不会**
+> 
+> > 按照罗尔斯的观点这也没有被选中
+> 
+> 原因: 
+> - 因为这个本质是有利于对在社会中的处于优势地位的人的利益的
+1. 两个正义原则
+> 人民会选择这样的方案吗?
+>
+> **会!**
+> 
+> 罗尔斯认为所有的人一致地选择了这个方案
 
 ## 2.2. 无知之幕下理性选择的结果
 
@@ -150,33 +224,46 @@ $$
 
 1. 它们对个人权利的不同态度
    1. 权利思想关注 **个人** 是否受到公平的对待, 个人权利是否受到侵犯(相信个人有社会所不能侵犯的权利). 
-        >  每个人都属于他自己而不属于社会
+      > 权利思想相信, 个体有社会所不能够去侵犯的权利, 每个人都被看作是目的, 而且是平等的主体, 即使以社会巨大利益之名, 也不能牺牲到个人的正当利益. 
+      > 
+      > **每个人都属于他自己而不属于社会**
    2. 功利主义关注 **社会的整体** 利益是否得到促进, 赋予个人权利只是促进社会福利的策略. 
-        > 不关注个人权利是否受到侵犯, 只关注社会的整体利益是否得到促进, 不关注资源在个体之间的分配是否公平
+        > 不关注个人权利是否受到侵犯, 只关注社会的整体利益是否得到促进, 不关注资源在个体之间的分配是否公平. 
         > 
-        > 赋予每个人的权利的状态的赋予仅基于社会总体的考量, 赋予个人权利是为了促进社会总体的进步
-        > > i.e. 如果赋予个人财产权有助于社会财富的增长, 那就赋予个人以财产权; 如果赋予每个人不平等的财产权更有处于社会财富的增长, 那就赋予不平等的财产权
+        > > 即使是 **平均功利主义** 也不会关注资源如何在不同的个体之间进行分配的问题. 它本质上还是一个变相的 **古典功利主义**, 其最终还是关注社会的整体利益是否得到促进.
+        > 
+        > 功利主义并不排斥赋予个人以权利, 如果这有助于社会整体的利益. 赋予每个人的权利的状态的赋予仅基于社会总体的考量, 赋予个人权利是为了促进社会总体的进步
+        > > *i.e.* 
+        > > 
+        > > 如果赋予个人财产权有助于社会财富的增长, 那就赋予个人以财产权; 如果赋予每个人不平等的财产权更有处于社会财富的增长, 那就赋予不平等的财产权
 2. 具有不同的推理方式以及正义观和社会观
-   > 功利主义把个人的欲望合成为整个的社会欲望体系, 把这一欲望体系的满足看作是法律制度的目的. 个人行动的策略是要尽可能地增进他自己的福利, 实现他自己的一系列欲望. 社会的行动策略也应该尽可能地去增进集体的福利, 最大限度地去满足社会的欲望体系. 正如个人要在当前与未来的得失之间进行权衡一样, 一个社会也可以对不同个人之间的满足与不满足进行权衡. 如果一个社会的法制最大限度地提高了满足的净差额, 这个社会就是一个得到适当安排的社会. 
+   > - 功利主义
+   >    - 功利主义把个人的欲望合成为整个的社会欲望体系, 把这一欲望体系的满足看作是法律制度的目的. 个人行动的策略是要尽可能地增进他自己的福利, 实现他自己的一系列欲望. 社会的行动策略也应该尽可能地去增进集体的福利, 最大限度地去满足社会的欲望体系. 正如个人要在当前与未来的得失之间进行权衡一样, 一个社会也可以对不同个人之间的满足与不满足进行权衡. **如果一个社会的法制最大限度地提高了满足的净差额, 这个社会就是一个得到适当安排的社会**. 
    > 
-   > > 如果对少部分人权利的侵犯可以换取社会的整体利益的增长, 那么就应该这么做
-   > > 
-   > > > 如果lockdown有利于全体的福利, 那么就应该这么做
-   > > > 
-   > > > 如果把少部分人关camp有利于全体的福利, 那么就应该这么做
-   > > 
-   > > ***可以先损害你, 之后再补偿你***
-   > 
-   > 功利主义并不在人与人之间做出严格的区分. 功利主义的社会观是把社会看作一个 **所有人紧密联系** 的社会. 一个人的成本和收益最终会转化为社会的成本和收益. 
-   > 
-   > 功利主义想象存在一个"公平的观察者", 他不属于某个社会, 然而又能够全面地观察、同情地了解这个社会里所有人和所有种类的快乐与痛苦, 不偏不倚地汇总所有快乐和痛苦的值. 
+   >    > 功利主义者认为所有的人都是功利主义者, 会为了实现个人利益的最大化(长远的利益), 而牺牲短期的利益(为了将来的最大幸福而牺牲). 那么将这样的思想推广到政府的层面就是我们所见的功利主义. 为了将来的利益而忍受现在的痛苦, 为了大多数人的利益而牺牲少数人的利益. 
+   >    > 
+   >    > 如果对少部分人权利的侵犯可以换取社会的整体利益的增长, 那么就应该这么做
+   >    > 
+   >    > > 如果lockdown有利于全体的福利, 那么就应该这么做
+   >    > > 
+   >    > > 如果把少部分人关camp有利于全体的福利, 那么就应该这么做
+   >    > 
+   >    > ***可以先损害你, 之后再补偿你***
+   >    - 功利主义并不在人与人之间做出严格的区分. 功利主义的社会观是把社会看作一个 **所有人紧密联系** 的社会. 一个人的成本和收益最终会转化为社会的成本和收益. 
+   >    > "功利主义并不在人与人之间做出严格的区分"
+   >    > > 功利主义认为, 所有人的欲望都是相通的, 不用在意单个人的成本和收益, 因为每一个人的成本和收益最终都算是社会的成本和收益的一部分. 
+   >    > 功利主义认为对少数人的利益的侵犯可以在他们的牺牲带来的社会的整体利益的增长中获得补偿, 即使这样的补偿不一定发生(功利主义不能保证这样的补偿一定会发生).
+   >    - 功利主义想象存在一个"公平的观察者", 他不属于某个社会, 然而又能够全面地观察、同情地了解这个社会里所有人和所有种类的快乐与痛苦, 不偏不倚地汇总所有快乐和痛苦的值. 
+   >    > 一种上帝的视角
    > 
    > ---
-   > 
-   > 人权思想认为, 每个人都是不同于其他任何人的独立个体, 任何一个个体都是不能为其他个体所替代的, 都有存在的意义和价值, 因此为了社会整体利益而强迫牺牲某些个体利益, 实际上是对这些个体的不尊重. 权利思想包含一种契约论, 把人们一致同意或普遍有利的东西看作是正义的基础. 
+   > - 人权思想
+   >    - 人权思想认为, 每个人都是不同于其他任何人的独立个体, 任何一个个体都是不能为其他个体所替代的, 都有存在的意义和价值, 因此为了社会整体利益而强迫牺牲某些个体利益, 实际上是对这些个体的不尊重. 权利思想包含一种 **契约论** , 把人们一致同意或普遍有利的东西看作是正义的基础. 
+   >    > 如果牺牲某个人的利益就是将这个人作为手段/工具来看待. 
    > > 什么能兼顾人权思想和功利主义呢?
    > > 
    > > **契约论**. 人们只有认同这个契约可以使自己的利益得到保障, 才会同意这个契约; 而这个契约的提出是为了保障每个人的利益, 使每个人都能够得到保障.由此便得以兼顾人权思想和功利主义
+   > > > 人民同意才有效, 人民认为有利才同意. 
 3. 目的论与道义论
    > 功利主义是一种 **目的论** 以理性欲望体系的最大程度满足(社会福利总额)作为立法和司法的目的. 对制度措施的评判标准是它是否能够促进这一目的. 
    > 
@@ -184,20 +271,26 @@ $$
    > 
    > 权利思想是一种 **道义论** . 它认为, 个人权利构成对立法和司法的边际道德约束. 保障权利、不侵犯权利, 是立法和司法机关的义务. 尊重和行使自己的权利, 也是每个人对自己的义务. 对制度措施的评判标准是它是否符合权利原则. 
    > 
+   > ---
+   > 
    > 严格的人权思想反对权利功利主义. **权利功利主义** 把最大多数人权利的最大程度保障和实现看作是目的. 为了最大程度地增加权利的数量或减少权利被侵犯的数量, 可以牺牲某人权利. 这个牺牲是一个必要的代价. **人权思想认为, 即使为了保障一些人的权利或者为了保障社会大多数人的权利而牺牲另一些人的权利, 也是错误的**. 
    > 
-   > > 这是实际上是一种变相的功利主义, 因为它本质上还是会造成一部分人的权利被侵犯
+   > > 这是实际上是一种**变相的功利主义**, 因为它本质上还是会造成一部分人的正当权利被不当牺牲
 4. 权利思想认为, 正当独立于善, 并优先于善. 功利主义认为, 正当就是 **善** 的增加. 
    > - 正当(right) 是指行为的性质是对的, 正确的
    > - 善(good) 指行为的结果是好的
    > 
    > 正当独立于善, 是说正当与善是两个不同的问题, 何为正当不能依据是否是善来判断. 正当优先于善, 是说, 一个行为的价值首先取决于它是一个正当的行为, 而不是善. 善独立于正当, 是说, 何为善, 不依赖于对正当的判断. 正当意味着善的增加, 是说, 一个行为是否正当, 取决于它能否增进结果的善. 功利主义有时被称为结果主义. 
    > 
-   > > 一个行为对不对与一个行为好不好之间没有关系, 一个行为可以带来好的结果, 但是如果是侵犯权利的那就不是个好的行为. 
+   > > 一个行为对不对与一个行为好不好之间没有关系, 一个行为可以带来好的结果, 但是如果是侵犯权利的那就不是个对的行为(善而不正义). 
+   > > 
+   > > 功利主义认为不存在抽象的正当, 何为正当? 这是依据结果来判断 → 功利主义是结果主义的一种, 功利主义是一种结果主义.
 
 # 4. 权利还是功利? 这是个问题
 
 人类社会的道德困境与选择
+
+> 实践中的普遍的道德困境. 
 
 两个著名的思想实验(选自 W·Morrison: Jurisprudence: From Greece to Postmordern, 1996)
 
