--- a/liner algebra/CN/1.3 行列式按行展开.md
+++ b/liner algebra/CN/1.3 行列式按行展开.md
@@ -313,3 +313,40 @@ D = \begin{vmatrix}
     8 & 3 & 1
 \end{vmatrix}
 $$
+
+# 行列式相乘
+
+计算方法为:
+
+> 其结果的某一元素, 为左边行列式对应的该元素的对应的行乘以右边行列式中该元素对应的列的所有元素之和
+
+举例说明:
+
+$$
+\begin{vmatrix}
+    1 & 2 & 3 \\
+    4 & 5 & 6 \\
+    7 & 8 & 9
+\end{vmatrix} \times
+\begin{vmatrix}
+    1 & 2 & 3 \\
+    4 & 5 & 6 \\
+    7 & 8 & 9
+\end{vmatrix} \\
+\downarrow \\
+\begin{vmatrix}
+    1 \times 1 + 2 \times 4 + 3 \times 7 & 1 \times 2 + 2 \times 5 + 3 \times 8 & 1 \times 3 + 2 \times 6 + 3 \times 9 \\
+    4 \times 1 + 5 \times 4 + 6 \times 7 & 4 \times 2 + 5 \times 5 + 6 \times 8 & 4 \times 3 + 5 \times 6 + 6 \times 9 \\
+    7 \times 1 + 8 \times 4 + 9 \times 7 & 7 \times 2 + 8 \times 5 + 9 \times 8 & 7 \times 3 + 8 \times 6 + 9 \times 9
+\end{vmatrix} \\
+\downarrow \\
+\begin{vmatrix}
+    30 & 36 & 42 \\
+    66 & 81 & 96 \\
+    102 & 126 & 150
+\end{vmatrix}
+$$
+
+> 注意, 行列式必然是可以相乘的, 即使是左边行与右边的列不能对应的两个, 因为行列式本质上对应的是一个数字, 而数字之间是必然可以相乘的, 也就是
+>
+> **行列式的相乘定理是有限制的, 但是行列式的相乘是无限制的, 必然存在的**
