--- a/liner algebra/CN/1.4 行列式的计算（一）.md
+++ b/liner algebra/CN/1.4 行列式的计算（一）.md
@@ -9,8 +9,129 @@ $$
 \end{vmatrix}
 $$
 
-此时的解决方法有两种
+> 此时的解决方法有两种
+> 
+> 1. 将第一行与其余的某一行换行, 但是要注意此时需要乘以 `-1` (`变号`)
+> 2. 将之后的某行乘以某一个数加到第一行上去, 此时不需要 `变号`
 
-1. 将第一行与其余的某一行换行, 但是要注意此时需要乘以 `-1` (`变号`)
-2. 将之后的某行乘以某一个数加到第一行上去, 此时不需要 `变号`
+# 举例二
 
+$$
+D = \begin{vmatrix}
+    3 & 0 & 4 & 0 \\
+    3 & 2 & 2 & 2 \\
+    0 & -7 & 0 & 0 \\
+    5 & 3 & 2 & 2
+\end{vmatrix}
+$$
+
+要计算: 
+
+$$
+M _{41} + M _{42} + M _{43} + M _{44}
+$$
+
+> 解法: 构造代数余子式
+
+$$
+\begin{align*}
+    & M _{41} + M _{42} + M _{43} + M _{44} \\
+    &= - (-1)^{4+1} \times M _{41} + (-1)^{4+2} \times M _{42} - (-1)^{4+3} \times M _{43} + (-1)^{4+4} \times M _{44} \\ 
+\end{align*}
+$$
+
+则易得此时对应的行列式为:
+
+$$
+\begin{vmatrix}
+    3 & 0 & 4 & 0 \\
+    3 & 2 & 2 & 2 \\
+    0 & -7 & 0 & 0 \\
+    -1 & 1 & -1 & 1
+\end{vmatrix}
+$$
+
+对其用按行展开的方法进行计算即可
+
+即:
+
+$$
+\begin{align*}
+    &= -7 \times (-1) ^{3+2} \times \begin{vmatrix}
+        3 & 4 & 0 \\
+        3 & 2 & 2 \\
+        -1 & -1 & 1
+    \end{vmatrix} \\
+    &= -7 \times (-1) ^{3+2} \times \begin{vmatrix}
+        -1 & -1 & 1\\
+        3 & 4 & 0 \\
+        3 & 2 & 2
+    \end{vmatrix} \\
+    &= -7 \times (-1) ^{3+2} \times \begin{vmatrix}
+        -1 & -1 & 1 \\
+        0 & 1 & 3 \\
+        0 & -1 & 5
+    \end{vmatrix} \\
+    &= -7 \times (-1) ^{3+2} \times \begin{vmatrix}
+        -1 & -1 & 1 \\
+        0 & 1 & 3 \\
+        0 & 0 & 8
+    \end{vmatrix} \\
+    &= -7 \times (-1) ^{3+2} \times (-1) \times 1 \times 8 \\
+    &= -56
+\end{align*}
+$$
+
+# 举例三
+
+$$
+\begin{vmatrix}
+    x & a & a & \cdots & a \\
+    a & x & a & \cdots & a \\
+    a & a & x & \cdots & a \\
+    \vdots & \vdots & \vdots & \ddots & \vdots \\
+    a & a & a & \cdots & x
+\end{vmatrix}
+$$
+
+> 解法: 将第一行加上其余的行, 此时的行列式为:
+
+$$
+\begin{vmatrix}
+    x + (n-1)a & a & a & \cdots & a \\
+    x + (n-1)a & x & a & \cdots & a \\
+    x + (n-1)a & a & x & \cdots & a \\
+    \vdots & \vdots & \vdots & \ddots & \vdots \\
+    x + (n-1)a & a & a & \cdots & x
+\end{vmatrix}
+$$
+
+> 将 `x + (n-1)a` 提出来
+
+$$
+x + (n-1)a \times \begin{vmatrix}
+    1 & a & a & \cdots & a \\
+    1 & x & a & \cdots & a \\
+    1 & a & x & \cdots & a \\
+    \vdots & \vdots & \vdots & \ddots & \vdots \\
+    1 & a & a & \cdots & x
+\end{vmatrix}
+$$
+
+> 将后面的项都加上第一行的乘以 `-a`, 得到: 
+
+$$
+x + (n-1)a \begin{vmatrix}
+    1 & 0 & 0 & \cdots & 0 \\
+    1 & x-a & 0 & \cdots & 0 \\
+    1 & 0 & x-a & \cdots & 0 \\
+    \vdots & \vdots & \vdots & \ddots & \vdots \\
+    1 & 0 & 0 & \cdots & x-a
+\end{vmatrix}
+$$
+
+> 此时的行列式便是上三角行列式, 所以其值为:
+
+$$
+x + (n-1)a \times (x-a)^{n-1}
+$$
