--- a/liner algebra/CN/1.4 行列式的计算（二）.md
+++ b/liner algebra/CN/1.4 行列式的计算（二）.md
@@ -67,6 +67,11 @@ $$
 (\frac{1}{a _{1}} + \frac{1}{a _{2}} \cdots \frac{1}{a _n}) \times a _{1} \times a _{2} \times \cdots \times a _{n}
 $$
 
+## 备注
+
+> 1. 加边不能改变原行列式的值
+> 2. 有字母的情况下注意是否有 `0` 的情况
+
 ## 加边法的证明方法
 
 > 用按边展开就可以解答
@@ -124,3 +129,127 @@ $$
 > $$
 >
 > 其按 `第一行` 展开后结果也和原行列式相等
+
+# 举例二 (范德蒙德行列式)
+
+$$
+\begin{vmatrix}
+    1 & 1 & 1 & 1 & \cdots & 1 \\
+    x _{1} & x _{2} & x _{3} & x _{4} & \cdots & x _{n} \\
+    x _{1} ^{2} & x _{2} ^{2} & x _{3} ^{2} & x _{4} ^{2} & \cdots & x _{n} ^{2} \\
+    \vdots & \vdots & \vdots & \vdots & \ddots & \vdots \\
+    x _{1} ^{n - 1} & x _{2} ^{n - 1} & x _{3} ^{n - 1} & x _{4} ^{n - 1} & \cdots & x _{n} ^{n - 1}
+\end{vmatrix} =
+\prod \limits_{1 \leq i < j \leq n} (x _{j} - x _{i})
+$$
+
+> $$
+> \prod
+> $$
+
+e.g.
+
+$$
+\begin{align*}
+    D &= \begin{vmatrix}
+        1 & 1 & 1 & 1 & 1 \\
+        x _{1} & x _{2} & x _{3} & x _{4} & x _{5} \\
+        x _{1} ^{2} & x _{2} ^{2} & x _{3} ^{2} & x _{4} ^{2} & x _{5} ^{2} \\
+        x _{1} ^{3} & x _{2} ^{3} & x _{3} ^{3} & x _{4} ^{3} & x _{5} ^{3} \\
+        x _{1} ^{4} & x _{2} ^{4} & x _{3} ^{4} & x _{4} ^{4} & x _{5} ^{4}
+    \end{vmatrix} \\
+    &= \prod \limits_{1 \leq i < j \leq 5} (x _{j} - x _{i}) \\
+    &= (x _{2} - x _{1}) \times (x _{3} - x _{1}) \times (x _{4} - x _{1}) \times (x _{5} - x _{1}) \times (x _{3} - x _{2}) \\ & \quad  \times (x _{4} - x _{2}) \times (x _{5} - x _{2}) \times (x _{4} - x _{3}) \times (x _{5} - x _{3}) \times (x _{5} - x _{4})
+\end{align*}
+$$
+
+## 证明
+
+$$
+\begin{align*}
+    D &= \begin{vmatrix}
+        1 & 1 & 1 & 1 & \cdots & 1 \\
+        x _{1} & x _{2} & x _{3} & x _{4} & \cdots & x _{n} \\
+        x _{1} ^{2} & x _{2} ^{2} & x _{3} ^{2} & x _{4} ^{2} & \cdots & x _{n} ^{2} \\
+        \vdots & \vdots & \vdots & \vdots & \ddots & \vdots \\
+        x _{1} ^{n - 1} & x _{2} ^{n - 1} & x _{3} ^{n - 1} & x _{4} ^{n - 1} & \cdots & x _{n} ^{n - 1}
+    \end{vmatrix} _{n} \\
+    &= \begin{vmatrix}
+        1 & 1 & 1 & \cdots & 1 \\
+        0 & x _{2} - x _{1} & x _{3} -x _{1} &\cdots & x _{n} - x _{1} \\
+        \vdots & \vdots & \vdots & \ddots & \vdots \\
+        0 & x _{2} ^{n - 2} - x _{1} x _{2} ^{n - 3} & x _{3} ^{n - 2} - x _{1} x _{3} ^{n - 3} & \cdots & x _{n} ^{n - 2} - x _{1} x _{n} ^{n - 3} \\
+        0 & x _{2} ^{n - 1} - x _{1} x _{2} ^{n - 2} & x _{3} ^{n - 1} - x _{1} x _{3} ^{n - 2} & \cdots & x _{n} ^{n - 1} - x _{1} x _{n} ^{n - 2}
+    \end{vmatrix} _{n} \\
+    &= \begin{vmatrix}
+        x _{2} - x _{1} & x _{3} -x _{1} &\cdots & x _{n} - x _{1} \\
+        x _{2} ^{n - 2} - x _{1} x _{2} ^{n - 3} & x _{3} ^{n - 2} - x _{1} x _{3} ^{n - 3} & \cdots & x _{n} ^{n - 2} - x _{1} x _{n} ^{n - 3} \\
+        \vdots & \vdots & \ddots & \vdots \\
+        x _{2} ^{n - 1} - x _{1} x _{2} ^{n - 2} & x _{3} ^{n - 1} - x _{1} x _{3} ^{n - 2} & \cdots & x _{n} ^{n - 1} - x _{1} x _{n} ^{n - 2}
+    \end{vmatrix} _{n-1} \\
+    &= \begin{vmatrix}
+        x _{2} - x _{1} & x _{3} -x _{1} &\cdots & x _{n} - x _{1} \\
+        \vdots & \vdots & \ddots & \vdots \\
+        x _{2} ^{n - 3} (x _{2} - x _{1}) & x _{3} ^{n - 3} (x _{3} - x _{1}) & \cdots & x _{n} ^{n - 3} (x _{n} - x _{1}) \\
+        x _{2} ^{n - 3} (x _{2} - x _{1}) & x _{2} ^{n - 2} (x _{3} - x _{1}) & \cdots & x _{n} ^{n - 2} (x _{n} - x _{1}) \\
+    \end{vmatrix} _{n-1} \\
+    &= (x _{2} - x _{1}) \times (x _{3} - x _{1}) \times \cdots \times (x _{n} - x _{1}) \times \begin{vmatrix}
+        1 & 1 & \cdots & 1 \\
+        x _{2} & x _{3} & \cdots & x _{n} \\
+        \vdots & \vdots & \ddots & \vdots \\
+        x _{2} ^{n - 3} & x _{3} ^{n - 3} & \cdots & x _{n} ^{n - 3} \\
+        x _{2} ^{n - 2} & x _{3} ^{n - 2} & \cdots & x _{n} ^{n - 2} \\
+    \end{vmatrix} _{n-1} \\
+\end{align*}
+$$
+
+利用数学归纳法:
+
+则, 假设之后的已经符合范德蒙德行列式, 则
+
+$$
+\begin{align*}
+    &= (x _{2} - x _{1}) \times (x _{3} - x _{1}) \times \cdots \times (x _{n} - x _{1}) \times \prod \limits_{2 \leq i < j \leq n} (x _{j} - x _{i}) \\
+    &= \prod \limits_{1 \leq i < j \leq n} (x _{j} - x _{i})
+\end{align*}
+$$
+
+得证.
+
+## 例题
+
+$$
+\begin{align*}
+    \begin{vmatrix}
+        1 & 1 & 1 & 1 \\
+        1 & -1 & 2 & 3 \\
+        1 & 1 & 4 & 9 \\
+        1 & -1 & 8 & 27
+    \end{vmatrix} &= \begin{vmatrix}
+        1 & 1 & 1 & 1 \\
+        1 & (-1) & 2 & 3 \\
+        1 ^{2} & (-1) ^{2} & 2 ^{2} & 3 ^{2} \\
+        1 ^{3} & (-1) ^{3} & 2 ^{3} & 3 ^{3}
+    \end{vmatrix} \\
+    &= \prod \limits _{1 \leq i < j \leq 4} (x _{j} - x _{i}) \\
+    &= ((-1) - 1) \times (2 - 1) \times (3 - 1) \\ & \quad \times (2 - (-1)) \times (3 - (-1))  \\ & \quad \times (3 -  2) \\
+    &= -2 \times 1 \times 2 \times 3 \times 4 \times 1 \\
+    &= -48
+\end{align*}
+$$
+
+> 也可以是竖着的, 因为行列式转置, 值不变 (`D^T = D`)
+>
+> e.g.
+>
+> $$
+> \begin{vmatrix}
+>     1 & 2 & 4 & 8 \\
+>     1 & 3 & 9 & 27 \\
+>     1 & 4 & 16 & 64 \\
+>     1 & 5 & 25 & 125
+> \end{vmatrix}
+> $$
+
+# 举例三 (反对称行列式)
+
