--- a/liner algebra/CN/1.4 行列式的计算（二）.md
+++ b/liner algebra/CN/1.4 行列式的计算（二）.md
@@ -251,5 +251,69 @@ $$
 > \end{vmatrix}
 > $$
 
-# 举例三 (反对称行列式)
+# 举例三 (反对称行列式与对称行列式)
+
+## 反对称行列式
+
+例如: 
+
+$$
+\begin{vmatrix}
+    0 & 1 & 2 & 3 \\
+    -1 & 0 & 5 & 6 \\
+    -2 & -5 & 0 & 8 \\
+    -3 & -6 & -8 & 0
+\end{vmatrix}
+$$
+
+> 1. 主对角线全为 `0`
+> 2. 上下位置对应成相反数
+> > 即: `a[i][j] = -a[j][i]`
+
+## 对称行列式
+
+例如:
+
+$$
+\begin{vmatrix}
+    1 & 2 & 3 & 4 \\
+    2 & 5 & 6 & 7 \\
+    3 & 6 & 8 & 9 \\
+    4 & 7 & 9 & 10
+\end{vmatrix}
+$$
+
+> 1. 主对角线元素无要求
+> 2. 上下对应相等
+> > 即: `a[i][j] = a[j][i]`
+
+## 性质
+
+### 反对称行列式, 且为奇数阶, 则 `D=0`
+
+比如: 
+
+$$
+D = \begin{vmatrix}
+    0 & a & b \\
+    -a & 0 & c \\
+    -b & -c & 0
+\end{vmatrix}
+$$
+
+则有: 
+
+$$
+D = (-1) ^{3} \begin{vmatrix}
+    0 & -a & -b \\
+    a & 0 & -c \\
+    b & c & 0
+\end{vmatrix} = -1 \begin{vmatrix}
+    0 & -a & -b \\
+    a & 0 & -c \\
+    b & c & 0
+\end{vmatrix} = - D ^{T} = - D
+$$
+
+由于 `D = -D`, 所以 `D = 0`
 
