--- a/liner algebra/CN/2.4 逆矩阵（一）.md
+++ b/liner algebra/CN/2.4 逆矩阵（一）.md
@@ -167,3 +167,33 @@ $$
 > | A | = 0 的情况以后再证. 
 
 > P.S. 实际上对于任何情况都成立, 即使 `| A | = 0`, 也有 `| A ^{*} | = | A | ^{n - 1}`
+
+---
+
+P.S.
+
+对于
+
+$$
+A = \begin{pmatrix}
+    5
+\end{pmatrix}
+$$
+
+它的伴随矩阵为?
+
+易得:
+
+$$
+\begin{align*}
+    A A ^{*} &= | A | E \\
+    \begin{pmatrix}
+        5
+    \end{pmatrix} A ^{*} &= 5 \begin{pmatrix}
+        1
+    \end{pmatrix} \\
+    A ^{*} &= \begin{pmatrix}
+        1
+    \end{pmatrix}
+\end{align*}
+$$
