--- a/liner algebra/CN/2.4 逆矩阵（二）.md
+++ b/liner algebra/CN/2.4 逆矩阵（二）.md
@@ -157,17 +157,70 @@ $$
 
 # 逆矩阵的性质
 
-`A` 可逆, `A ^T` 可逆, 则: 
+`A` 可逆, `A ^T` 可逆, `A ^*` 可逆, `A ^-1` 可逆, `k != 0` 则: 
 
 $$
-(A ^T) ^{-1} = (A ^{-1}) ^T
+\begin{align}
+    (A ^{-1}) ^{-1} &= A \tag{1} \\
+    (AB) ^{-1} &= B ^{-1} A ^{-1} \tag{2} \\
+    (A ^T) ^{-1} &= (A ^{-1}) ^T \tag{3} \\
+    (kA) ^{-1} &= \frac{1}{k} A ^{-1} \tag{4} \\
+    | A ^{-1} | &= \frac{1}{|A|} = | A | ^{-1} \tag{5} \\
+    (A ^{*}) ^{-1} &= \frac{1}{|A|} A \tag{6} \\
+\end{align}
 $$
+
+## `A ^*` 专题
+
+$$
+\begin{align}
+    按行求, 按列放 \tag{1} \\
+    A ^* A = |A| E \tag{2} \\
+    | A ^* | = | A | ^{n - 1} \tag{3} \\
+    A ^{-1} = \frac{1}{|A|} A ^* \tag{4} \\
+    A ^* = |A| A ^{-1} \tag{4.1} \\
+    (A ^{*}) ^{-1} = \frac{1}{|A|} A \tag{5} \\
+\end{align}
+$$
+
+> $$
+> \begin{align}
+>     (A ^{*}) ^{*} = | A | ^{n - 2} A  \tag{6}
+> \end{align}
+> $$
+>
+> 证明:
+> 
+> $$
+> \begin{align*}
+>     (A ^{*}) ^{*} &= | A ^{*} | (A ^{*}) ^{-1} \\
+>     &= | A | ^{n - 1} \frac{1}{|A|} A \\
+>     &= | A | ^{n - 2} A 
+> \end{align*}
+> $$
+
+> $$
+> \begin{align}
+>    ((A ^{*}) ^{*}) ^{*} = | A | ^{n ^2 - 3n + 3} A ^{-1} \tag{7}
+> \end{align}
+> $$
+>
+> 证明:
+>
+> $$
+> \begin{align*}
+>     ((A ^{*}) ^{*}) ^{*} &= | A ^{*} | ^{n - 2} A ^{*} \\
+>     &= ( | A | ^{n - 1}) ^{n - 2} | A | A ^{-1} \\
+>     &= | A | ^{(n - 1)(n - 2) + 1} A ^{-1} \\
+>     &= | A | ^{n ^2 - 3n + 3} A ^{-1} \\
+> \end{align*}
+> $$
 
 [^1]: 不妨令方阵 `A` 有两个逆矩阵 本别为 `B_1` 和 `B_2`, 则有:
 $$ 
 \begin{align}
-    A B _1 = B _1 A = E \\
-    A B _2 = B _2 A = E
+    A B _1 = B _1 A = E \tag{1} \\
+    A B _2 = B _2 A = E \tag{2} \\
 \end{align}
 $$
 此时易得: 
