--- a/liner algebra/CN/2.5 分块矩阵.md
+++ b/liner algebra/CN/2.5 分块矩阵.md
@@ -51,3 +51,143 @@ A & 0 \\
 0 & B
 \end{vmatrix} = | A | | B |
 $$
+
+## 求 H ^-1^
+
+$$
+H ^{-1} = \begin{bmatrix}
+A ^{-1} & -A ^{-1} C B ^{-1} \\
+0 & B ^{-1}
+\end{bmatrix}
+$$
+
+证明:
+
+不妨设: 
+
+$$
+H ^{-1} = \begin{bmatrix}
+X & Y \\
+Z & W
+\end{bmatrix}
+$$
+
+则有:
+
+$$
+H H ^{-1} = E
+$$
+
+$$
+\begin{bmatrix}
+A & C \\
+0 & B
+\end{bmatrix} \begin{bmatrix}
+X & Y \\
+Z & W
+\end{bmatrix} = \begin{bmatrix}
+E & 0 \\
+0 & E
+\end{bmatrix}
+$$
+
+> 值得注意的时, 这里的 两个 `E` 时不相等的, 因为一个是 `m` 阶, 一个是 `n` 阶
+
+$$
+\begin{bmatrix}
+A X + C Z & A Y + C W \\
+B Z & B W
+\end{bmatrix} = \begin{bmatrix}
+E & 0 \\
+0 & E
+\end{bmatrix}
+$$
+
+$$
+\begin{cases}
+    \begin{align}
+        A X + C Z = E \tag{1} \\
+        A Y + C W = 0 \tag{2} \\
+        B Z = 0 \tag{3} \\
+        B W = E \tag{4}
+    \end{align}
+\end{cases}
+$$
+
+易得, 先求 (3): 
+
+$$
+\begin{align*}
+    B Z &= 0 \\
+    B ^{-1} B Z &= B ^{-1} 0 \\
+    Z &= 0
+\end{align*}
+$$
+
+再求 (4):
+
+$$
+\begin{align*}
+    B W &= E \\
+    B ^{-1} B W &= B ^{-1} E \\
+    W &= B ^{-1}
+\end{align*}
+$$
+
+其他易得, 结果为:
+
+$$
+\begin{cases}
+X = A ^{-1} \\
+Z = 0 \\
+Y = -A ^{-1} C B ^{-1} \\
+W = B ^{-1}
+\end{cases}
+$$
+
+### 推广
+
+#### 推论一
+
+对于分块矩阵: 
+
+$$
+H = \begin{vmatrix}
+A & 0 \\
+0 & B
+\end{vmatrix}
+$$
+
+其逆矩阵为:
+
+$$
+H ^{-1} = \begin{bmatrix}
+A ^{-1} & 0 \\
+0 & B ^{-1}
+\end{bmatrix}
+$$
+
+#### 推论二
+
+同理, 对于分块矩阵: 
+
+$$
+H = \begin{vmatrix}
+A _{1} & 0 & \cdots & 0 \\
+0 & A _{2} & \cdots & 0 \\
+\vdots & \vdots & \ddots & \vdots \\
+0 & 0 & \cdots & A _{n}
+\end{vmatrix}
+$$
+
+其逆矩阵为:
+
+$$
+H ^{-1} = \begin{bmatrix}
+A _{1} ^{-1} & 0 & \cdots & 0 \\
+0 & A _{2} ^{-1} & \cdots & 0 \\
+\vdots & \vdots & \ddots & \vdots \\
+0 & 0 & \cdots & A _{n} ^{-1}
+\end{bmatrix}
+$$
+
