--- a/Hospital internship/MID/消化/体格检查.md
+++ b/Hospital internship/MID/消化/体格检查.md
@@ -1,5 +1,7 @@
 # 讲稿
 
+> 嘱患者排空膀胱
+
 视诊: 患者腹部外形正常, 呈腹式呼吸, 无腹壁静脉曲张, 无胃肠型蠕动波无异常色素沉着, 无腹纹无疤痕无疝, 无蜘蛛痣, 无包块及肿大, 接下来进行腹部听诊
 
 听诊: 肠鸣音听诊, 计时一分钟, 肠鸣音4次/分, 腹主动脉, 双侧肾动脉, 髂动脉均未闻及血管杂音
