Update Pediatrics chapter files

--- a/Pediatrics/CH12.md
+++ b/Pediatrics/CH12.md
@@ -1,83 +1,4 @@
-- [解部特点](#解部特点)
-- [生理特点](#生理特点)
-- [肾脏的生理功能](#肾脏的生理功能)
-- [肾小球滤过率](#肾小球滤过率)
-- [肾小管重吸收及泄功能](#肾小管重吸收及泄功能)
-- [浓宿和稀释功能](#浓宿和稀释功能)
-  - [酸碱平衡](#酸碱平衡)
-  - [肾脏的内分泌功能](#肾脏的内分泌功能)
-- [小儿排尿及尿液特点](#小儿排尿及尿液特点)
-- [尿的性质](#尿的性质)
-- [12.png](#12png)
-- [13.png](#13png)
-- [14.png](#14png)
-- [15.png](#15png)
-- [16.png](#16png)
-- [肾脏疾病的实验室检查和特殊检查](#肾脏疾病的实验室检查和特殊检查)
-- [21.png](#21png)
-- [23.png](#23png)
-- [急性肾小球肾炎](#急性肾小球肾炎)
-- [26.png](#26png)
-- [27.png](#27png)
-- [28.png](#28png)
-- [29.png](#29png)
-- [30.png](#30png)
-- [31.png](#31png)
-- [32.png](#32png)
-- [33.png](#33png)
-- [34.png](#34png)
-- [35.png](#35png)
-- [36.png](#36png)
-- [37.png](#37png)
-- [38.png](#38png)
-- [39.png](#39png)
-- [40.png](#40png)
-- [41.png](#41png)
-- [42.png](#42png)
-- [43.png](#43png)
-- [44.png](#44png)
-- [45.png](#45png)
-- [46.png](#46png)
-- [47.png](#47png)
-- [48.png](#48png)
-- [49.png](#49png)
-- [50.png](#50png)
-- [51.png](#51png)
-- [52.png](#52png)
-- [53.png](#53png)
-- [54.png](#54png)
-- [55.png](#55png)
-- [56.png](#56png)
-- [57.png](#57png)
-- [58.png](#58png)
-- [59.png](#59png)
-- [60.png](#60png)
-- [61.png](#61png)
-- [62.png](#62png)
-- [63.png](#63png)
-- [64.png](#64png)
-- [65.png](#65png)
-- [66.png](#66png)
-- [67.png](#67png)
-- [68.png](#68png)
-- [69.png](#69png)
-- [70.png](#70png)
-- [71.png](#71png)
-- [72.png](#72png)
-- [73.png](#73png)
-- [74.png](#74png)
-- [75.png](#75png)
-- [76.png](#76png)
-- [77.png](#77png)
-- [78.png](#78png)
-- [79.png](#79png)
-- [80.png](#80png)
-- [81.png](#81png)
-- [82.png](#82png)
-- [83.png](#83png)
-- [84.png](#84png)
-- [85.png](#85png)
-- [86.png](#86png)
+# Ch 12
 
 ## 目录
 
@@ -87,7 +8,7 @@
 尿路感染
 血尿
 
-# 解部特点
+## 解部特点
 
 - 肾脏(kidney)
   - 重量：小儿年龄愈小，肾脏相对愈重
@@ -99,13 +20,13 @@
 - 尿道(urethra)
   - 新生女婴尿道长仅1cm，男婴尿道虽较长，但常有包茎
 
-# 生理特点
+## 生理特点
 
 - **胚胎期** 9-12周开始形成尿液，36周肾脏发育完成，肾单位数已达成人水平(每侧80万-100万)
 - **出生后** 生理功能基本与成人相似，但贮备能力差，调节机制不够成熟
 - **1-1.5岁** 小肾脏功能达成人水平
 
-# 肾脏的生理功能
+## 肾脏的生理功能
 
 - 肾小球滤过功能
 - 肾小管重吸收和排泄功能
@@ -113,36 +34,33 @@
 - 酸碱平衡
 - 内分泌功能
 
-# 肾小球滤过率
+## 肾小球滤过率
 
 > (Glomerular filtration rate， GFR)
-
 
 - 新生儿出生时肾小球滤过率约 20ml/(min/1.73m2)
 - 生后1周为成人的1/4，3-6个月为成人1/2，6-12个月为成人3/4
 
-# 肾小管重吸收及泄功能
+## 肾小管重吸收及泄功能
 
 - 新生儿葡萄糖肾阈较成人低
 - 生后头10天的新生儿，有高钾血症倾向
 - 新生期钠负荷过重时易导致水肿
 
-# 浓宿和稀释功能
+## 浓宿和稀释功能
 
 - 新生儿及幼婴脱水时尿渗透压最高不超过700mmol/L，而成人可达1400mmol/L一易发生脱水
 - 大量水负荷或输液过快时易出现水肿
 
-## 酸碱平衡
+### 酸碱平衡
 
 - 新生儿及婴幼儿易发生酸中毒
 
-## 肾脏的内分泌功能
+### 肾脏的内分泌功能
 
 肾素、前列腺素、激肽释放酶、促红细胞生成素和1，25一二羟骨化醇等
 
-# 小儿排尿及尿液特点
-
-
+## 小儿排尿及尿液特点
 
 | 每日尿量ml | 婴儿 | 幼儿 | 学龄前儿童 | 学龄儿童 |
 | :---: | :---: | :---: | :---: | :---: |
@@ -150,7 +68,7 @@
 | 少尿 | <200ml | <200ml | <300ml | <400ml |
 | 无尿 | <30-50 | <30-50 | <30-50 | <30-50 |
 
-# 尿的性质
+## 尿的性质
 
 1. 尿色一淡黄透明
 2. 蛋白质一正常小儿尿中仅含微量蛋白，通常≤100mg／(m².24h)，定性为阴性
@@ -159,31 +77,27 @@
    - 新鲜晨尿离心后沉渣镜检
    - 红细胞<3个/HP，白细胞<5个/HP
 
-# 12.png
+## 12.png
 
 红细胞管型
 
-
-# 13.png
+## 13.png
 
 白细胞管型
 
-
-# 14.png
+## 14.png
 
 草酸盐结晶
 
-
-# 15.png
+## 15.png
 
 磷酸盐结晶
 
-
-# 16.png
+## 16.png
 
 胱氨酸结晶
 
-# 肾脏疾病的实验室检查和特殊检查
+## 肾脏疾病的实验室检查和特殊检查
 
 - 肾功能检查：
   - 肾小球功能：BUN、Scr、Ccr等
@@ -204,11 +118,12 @@
 ---
 
 影像学检查
-  - B超检查：1肾脏位置、大小，肾积水、囊肿和结石等
-  - X线检查：腹部平片，静脉肾孟造影，排泄性膀胱尿路造影
-  - 放射性核素检查：99mTc DMSA、DTPA
 
-# 21.png
+- B超检查：1肾脏位置、大小，肾积水、囊肿和结石等
+- X线检查：腹部平片，静脉肾孟造影，排泄性膀胱尿路造影
+- 放射性核素检查：99mTc DMSA、DTPA
+
+## 21.png
 
 放射性核素(DMSA)
 
@@ -218,19 +133,19 @@
 - X线检查：腹部平片，静脉肾孟造影，排泄性膀胱尿路造影
 - 放射性核素检查：99mTc DMSA、DTPA
 
-# 23.png
+## 23.png
 
 肾穿刺
 
 肾穿刺活组织检查
+
 1. 肾活检的适应证
 2. 肾活检的禁忌证
    - 禁忌证有出血倾向、孤立肾、肾周脓肿和未控制的高血压等
 
-# 急性肾小球肾炎
+## 急性肾小球肾炎
 
-
-# 26.png
+## 26.png
 
 急性肾小球肾炎
 
@@ -239,14 +154,12 @@
 感染后免疫反应
 急性弥漫性肾小球炎性病变
 
-
-# 27.png
+## 27.png
 
 急性链球菌感染后肾炎
 病因--A组β溶血性链球菌
 
-
-# 28.png
+## 28.png
 
 不同感染所致的APSGN的差异
 呼吸道感染
@@ -272,7 +185,7 @@ AS0 ↑ >50%
 机体免疫反应
 AS0 ↑ >80%
 
-# 29.png
+## 29.png
 
 发病机理
 
@@ -281,8 +194,7 @@ ii原位免疫复合物
 ili3链球菌神经氨酸酶一自身免疫复合物致
 病学说
 
-
-# 30.png
+## 30.png
 
 病理生理
 
@@ -303,8 +215,7 @@ ili3链球菌神经氨酸酶一自身免疫复合物致
 全身毛细血管通透性个
 水肿
 
-
-# 31.png
+## 31.png
 
 病理
 
@@ -312,10 +223,9 @@ ili3链球菌神经氨酸酶一自身免疫复合物致
 大体标本一大红肾
 光镜所见一内皮系膜增生性肾炎
 电镜所见一驼峰状沉积(上皮细胞下)
-荧光所见一IgG和C3沉积(毛细血管祥和系膜区
+荧光所见一IgG和C3沉积(毛细血管祥和系膜区)
 
-
-# 32.png
+## 32.png
 
 d
 ®
@@ -326,7 +236,7 @@ d
 (k)Bowman囊
 底膜，(h)足突细胞。(i)上皮细胞,
 
-# 33.png
+## 33.png
 
 急性链感后肾小球肾炎：
 一组织学改变示意图
@@ -337,7 +247,7 @@ S
 (箭头处)
 福
 
-# 34.png
+## 34.png
 
 *14岁男孩患急性肾炎
 *病理组织学检查所见
@@ -345,18 +255,15 @@ S
 一无数嗜中性粒细胞(红色箭头)位于
 毛细血管祥内
 
-
-# 35.png
+## 35.png
 
 肾活检免疫荧光检测
 
-
-# 36.png
+## 36.png
 
 电镜一上皮细胞下电子致密物沉积
 
-
-# 37.png
+## 37.png
 
 临床表现
 
@@ -368,7 +275,7 @@ S
  血尿：镜下血尿(>5个RBC/HP)，30%-50%患儿可
 有肉眼血尿
 
-# 38.png
+## 38.png
 
 严重病例
 
@@ -382,7 +289,7 @@ S
 急性肾功能不全
 一暂时性氮质血症、电解质紊乱和代谢性酸中毒
 
-# 39.png
+## 39.png
 
 实验室检查
 
@@ -395,7 +302,7 @@ Aso：2 W (+)，3-5 W 高峰，3-6 M 恢复
 2周内CH50、C,明显降低，6-8周恢复
 持续补体低下者须考虑膜增生性肾炎
 
-# 40.png
+## 40.png
 
 病程和预后
 
@@ -409,8 +316,7 @@ Addis计数恢复正常
 4-8M
 痊愈率90%-95%，死亡率<1%-2%
 
-
-# 41.png
+## 41.png
 
 诊断和鉴别诊断
 
@@ -420,7 +326,7 @@ Addis计数恢复正常
 (3)尿检有蛋白、红细胞和管型
 (4)C3，伴或不伴 ASO 升高
 
-# 42.png
+## 42.png
 
 鉴别诊断
 
@@ -435,7 +341,7 @@ IgA肾病：发作性肉眼血尿，肾活检明确诊断
 急进型肾炎：起病相似，但2-3 W 病情恶化，易
 转变为尿毒症
 
-# 43.png
+## 43.png
 
 治疗
 
@@ -443,8 +349,7 @@ IgA肾病：发作性肉眼血尿，肾活检明确诊断
 饮食：低盐，低蛋白
 抗生素应用：7-10天青霉素治疗
 
-
-# 44.png
+## 44.png
 
 治疗
 
@@ -455,7 +360,7 @@ IgA肾病：发作性肉眼血尿，肾活检明确诊断
 降压：硝苯地平0.25-0.5mg/kg/d，Bid或Tid po
 肼苯达嗪l-2 mg ／kg，Bid或Tid po
 
-# 45.png
+## 45.png
 
 重症病例治疗
 
@@ -470,7 +375,7 @@ II 二氮嗪
 一本品为碱性，可造成皮下坏死
 II 安定止痉，吸氧等
 
-# 46.png
+## 46.png
 
 重症病例治疗
 
@@ -482,7 +387,7 @@ II 安定止痉，吸氧等
 一呋塞米1-5 mg kg,，重复2-3次
 一尽早考虑透析
 
-# 47.png
+## 47.png
 
 OSPITALOFFU院
 UNIVERSITY
@@ -491,15 +396,13 @@ UNIVERSITY
 1952
 肾病综合征
 
-
-# 48.png
+## 48.png
 
 病 例
 --男，3岁
 -眼脸及双下肢水肿10天
 
-
-# 49.png
+## 49.png
 
 水肿的鉴别
 
@@ -515,8 +418,7 @@ UNIVERSITY
 营养不良
 急性肾功能衰竭
 
-
-# 50.png
+## 50.png
 
 儿童肾病综合征
 
@@ -526,8 +428,7 @@ UNIVERSITY
 治疗
 o
 
-
-# 51.png
+## 51.png
 
 定义
 
@@ -537,8 +438,7 @@ o
 高脂血症
 低蛋白血症
 
-
-# 52.png
+## 52.png
 
 儿童肾病综合征
 
@@ -548,8 +448,7 @@ o
 ·男:女比例 3:2
 ·确切发病机制尚不清楚
 
-
-# 53.png
+## 53.png
 
 儿童肾病综合征
 
@@ -558,8 +457,7 @@ o
 诊断和分型
 治疗
 
-
-# 54.png
+## 54.png
 
 病理生理
 
@@ -574,14 +472,12 @@ Increased renal Na reabsorption
 Decreasedperipheral capiilaryreturn
 Increased interstitial fluid (edema)
 
-
-# 55.png
+## 55.png
 
 凹陷性水肿
 Pitting edema
 
-
-# 56.png
+## 56.png
 
 儿童肾病综合征
 
@@ -591,8 +487,7 @@ Pitting edema
 治疗
 ob
 
-
-# 57.png
+## 57.png
 
 Tabulae Anatomicae Bartholomaei Eustachii. 1722
 TABULE
@@ -614,8 +509,7 @@ ApudR.&
 WETSTENIOS
 DOX
 
-
-# 58.png
+## 58.png
 
 儿童肾病综合征的诊断
 大量蛋白尿 Massive proteinuria
@@ -627,8 +521,7 @@ DOX
 胆固醇>5.7mmol/l
 水肿 Edema
 
-
-# 59.png
+## 59.png
 
 肾病综合征分型
 
@@ -645,8 +538,7 @@ idiopathic
 单纯型
 学附属
 
-
-# 60.png
+## 60.png
 
 原发性肾病综合征
 Idiopathic Nephrotic Syndrome
@@ -659,8 +551,7 @@ Idiopathic Nephrotic Syndrome
 1??
 低补体血症 Low complement level
 
-
-# 61.png
+## 61.png
 
 儿童高而压诊断
 
@@ -670,8 +561,7 @@ cover 80% to 100% of the
 Olecranon
 circumference of the arm.
 
-
-# 62.png
+## 62.png
 
 儿童高而压诊断
 
@@ -686,8 +576,7 @@ BP Percentile
 Percentile of Height
 Percentile of Height
 
-
-# 63.png
+## 63.png
 
 原发性肾病综合征
 Idiopathic Nephrotic Syndrome
@@ -700,8 +589,7 @@ Idiopathic Nephrotic Syndrome
 1??
 低补体血症 Low complement level
 
-
-# 64.png
+## 64.png
 
 儿童正常血肌酐值二
 
@@ -723,8 +611,7 @@ mg/dl
 ca. Madrid: Aula Media. 2000: and Garcia-Nieto V. Santos F, eds. Grupo aula medica. Madrid: Aula Medica, 2000
 15-26.
 
-
-# 65.png
+## 65.png
 
 肾病综合征分型
 
@@ -741,8 +628,7 @@ idiopathic
 单纯型
 学附属
 
-
-# 66.png
+## 66.png
 
 Tabulae Anatomicae Bartholomaei Eustachii. 1722
 TABULE
@@ -765,8 +651,7 @@ WETSTENIOS
 DOX
 o6
 
-
-# 67.png
+## 67.png
 
 病理分型
 
@@ -789,8 +674,7 @@ o6
 5.膜性肾病
 1%
 
-
-# 68.png
+## 68.png
 
 肾小球示意图
 
@@ -800,8 +684,7 @@ C
 O复大学附属儿科医68
 日
 
-
-# 69.png
+## 69.png
 
 Foot process
 of podocyte
@@ -812,8 +695,7 @@ foot process
 足突融合
 复旦学附属儿科医
 
-
-# 70.png
+## 70.png
 
 Marilyn Farquhar
 Ge0rge Palade (1912-2008)
@@ -822,12 +704,11 @@ Medicine in 1974
 旦大学附属儿科医
 囍
 
-
-# 71.png
+## 71.png
 
 临床分型
 
-* Massive proteinuria, Hypoalbuminemia, Hyperlipidemia, Edema
+Massive proteinuria, Hypoalbuminemia, Hyperlipidemia, Edema
 先天性
 原发性
 继发性
@@ -836,8 +717,7 @@ Medicine in 1974
 微小病变多见
 非微小病变比例较高
 
-
-# 72.png
+## 72.png
 
 并发症
 
@@ -849,7 +729,7 @@ ELECTROLYTE DISTURBANCE
 Hyponatremia, hypokalemia, hypocalcemia
 ADRENAL CRISIS
 
-# 73.png
+## 73.png
 
 儿童肾病综合征
 
@@ -858,8 +738,7 @@ ADRENAL CRISIS
 诊断和分型
 治疗
 
-
-# 74.png
+## 74.png
 
 治 疗
 
@@ -868,8 +747,7 @@ ADRENAL CRISIS
 不推荐高蛋白饮食
 糖皮质激素-首选治疗药物
 
-
-# 75.png
+## 75.png
 
 The Clinical Usefulness of ACTH and Cortisone
 Georcevwy.Thorn, M.D..Peter H.Forsham, M,DThomas F.Frawley,M.D..S.Richardson Hill, Jr., M.D.
@@ -887,7 +765,7 @@ JULIA HARVEY, WILLIAM LEW, AND LEE J. POO
 J Clin Invest(1950 December; 29(12): 1576-1587.
 (Submitted for publicati0n July 13, 1950; accepted, September 5, 1950)
 
-# 76.png
+## 76.png
 
 糖皮质激素治疗
 
@@ -897,7 +775,7 @@ J Clin Invest(1950 December; 29(12): 1576-1587.
 -频复发 frequent relapse:复发≥2次/半年或≥3次/年
 激素耐药肾病综合征 steroid resistant nephrotic syndrome
 
-# 77.png
+## 77.png
 
 初治治疗效果
 
@@ -916,8 +794,7 @@ no
 relapse
 relapse
 
-
-# 78.png
+## 78.png
 
  Treatment of steroid-sensitive nephrotic syndrome: new
 guidelines from KDIGO
@@ -925,11 +802,11 @@ guidelines from KDIGO
 children: new guidelines from KDIGO
 Pediatric Nephrology, 2012
 
-# 79.png
+## 79.png
 
 临床分型
 
-* Massive proteinuria, Hypoalbuminemia, Hyperlipidemia, Edema
+Massive proteinuria, Hypoalbuminemia, Hyperlipidemia, Edema
 先天性
 原发性
 继发性
@@ -938,8 +815,7 @@ Pediatric Nephrology, 2012
 微小病变多见
 非微小病变比例较高
 
-
-# 80.png
+## 80.png
 
 糖皮质激素治疗的副作用
  Cosmetic - Cushingnoid facies,
@@ -957,18 +833,16 @@ CNS euphoria/depression
 Diabetes mellitus
  Acute pancreatitis..
 
-# 81.png
+## 81.png
 
 糖皮质激素治疗的副作用
 
-
-# 82.png
+## 82.png
 
 edu.cn
 一老方
 
-
-# 83.png
+## 83.png
 
 糖皮质激素治疗的副作用
  Cosmetic - Cushingnoid facies,
@@ -986,7 +860,7 @@ CNS euphoria/depression
 Diabetes mellitus
  Acute pancreatitis..
 
-# 84.png
+## 84.png
 
 儿童肾病综合行
 
@@ -998,8 +872,7 @@ Diabetes mellitus
 治疗
 糖皮质激素及疗效判断
 
-
-# 85.png
+## 85.png
 
 病例
 --男，3岁
@@ -1013,8 +886,7 @@ Diabetes mellitus
 -原发性肾病综合征
 (单纯型，激素敏感型)
 
-
-# 86.png
+## 86.png
 
 OSPITALOFFU院
 UNIVERSITY
@@ -1023,10 +895,6 @@ UNIVERSITY
 1952
 小儿泌尿系统疾病院
 肾脏科 沈 茜
-shengian@shmu.edu.cn
-
-
+<shengian@shmu.edu.cn>
 
 任务结束时间：2023-05-16 12:19:42
-
-
