--- a/Human right and laws/CH01 人权的历史意义.md
+++ b/Human right and laws/CH01 人权的历史意义.md
@@ -1,4 +1,6 @@
-# 人权的历史意义
+# CH01
+
+## 人权的历史意义
 
 ![Human evolution](https://dsm04pap003files.storage.live.com/y4mrMTxHeVKNS6qi7fuLTykEWilbXpBsmnwq_KAjkC8ai4Nq95KVANt6vVw82kUsyBSpIz3MwGp5UyZq1jfgkToJlKy9GzXGjjilqjjIuDcpNARr6LvArfWSIQzN5qmMBXyLtq0AP39LEQ7aPRclSJV4Q393qfbWLQSMp169gPlAuq7qIyaLlhc7LdoGR8eEs3E?width=474&height=338&cropmode=none)
 
@@ -31,88 +33,96 @@
 在生物学上看, 奴隶可能比奴隶主要更聪明, 有更高尚的品德, 但是他为什么会被鞭打?
 
 > 这种鞭打与被鞭打是自然进化的结果吗? 显然不是, 但为什么还会存在这样的状态?
-> > 这是社会结构, 政治法律制度的结果: 
+> > 这是社会结构, 政治法律制度的结果:
 > > > 咋生物学上看, 他们都是人, 但是在特定的社会结构与法律制度下, 他们有的是人, 有的不是人
 
 亚里士多德: 奴隶是会说话的工具.
 
 > 在亚里士多德看来, 人分为以下几个等级:
+>
 > - 有公民权的成年男子
+>
 > > 完整意义上的人
+>
 > - 妇女, 儿童和没有公民权的外邦人
+>
 > > 有自由权, 但是没有功能权, 不是完整意义上的人
 > > > 妇女和儿童有一定的理性, 但是没有公共的理性, 不能去参与审议公共事务, 只有在私人领域中一些分析判断和推理的能力
+>
 > - 奴隶
+>
 > > 在亚里士多德看来, 他们只有微博的理性, 他们的理性只能洞察, 理解和执行主人的命令, 他们完全不是人
 
 ---
 
-<img src="https://m.media-amazon.com/images/M/MV5BZmM2NTk5NDEtOGRlZi00ZjA3LTgwNjItOGNkN2VlNTg5YWIxXkEyXkFqcGdeQXVyOTc5MDI5NjE@._V1_.jpg" sizes="100vw" srcset="https://m.media-amazon.com/images/M/MV5BZmM2NTk5NDEtOGRlZi00ZjA3LTgwNjItOGNkN2VlNTg5YWIxXkEyXkFqcGdeQXVyOTc5MDI5NjE@._V1_FMjpg_UX320_.jpg 320w, https://m.media-amazon.com/images/M/MV5BZmM2NTk5NDEtOGRlZi00ZjA3LTgwNjItOGNkN2VlNTg5YWIxXkEyXkFqcGdeQXVyOTc5MDI5NjE@._V1_FMjpg_UX480_.jpg 480w, https://m.media-amazon.com/images/M/MV5BZmM2NTk5NDEtOGRlZi00ZjA3LTgwNjItOGNkN2VlNTg5YWIxXkEyXkFqcGdeQXVyOTc5MDI5NjE@._V1_FMjpg_UX600_.jpg 600w, https://m.media-amazon.com/images/M/MV5BZmM2NTk5NDEtOGRlZi00ZjA3LTgwNjItOGNkN2VlNTg5YWIxXkEyXkFqcGdeQXVyOTc5MDI5NjE@._V1_FMjpg_UX1024_.jpg 1024w, https://m.media-amazon.com/images/M/MV5BZmM2NTk5NDEtOGRlZi00ZjA3LTgwNjItOGNkN2VlNTg5YWIxXkEyXkFqcGdeQXVyOTc5MDI5NjE@._V1_FMjpg_UX1280_.jpg 1280w, https://m.media-amazon.com/images/M/MV5BZmM2NTk5NDEtOGRlZi00ZjA3LTgwNjItOGNkN2VlNTg5YWIxXkEyXkFqcGdeQXVyOTc5MDI5NjE@._V1_FMjpg_UX1920_.jpg 1920w" data-image-id="rm3415311873-curr" alt="The Last Emperor (1987)" class="sc-7c0a9e7c-1 lhATKa">
+![The Last Emperor](https://m.media-amazon.com/images/M/MV5BZmM2NTk5NDEtOGRlZi00ZjA3LTgwNjItOGNkN2VlNTg5YWIxXkEyXkFqcGdeQXVyOTc5MDI5NjE@._V1_FMjpg_UX1920_.jpg)
 
-劳动改进了人的身体结构和技能, 使人看起来像人, 具备了人的生物学特征. 劳动表明了在人与自然的关系中人通过改造自然而改造了自己. 
+劳动改进了人的身体结构和技能, 使人看起来像人, 具备了人的生物学特征. 劳动表明了在人与自然的关系中人通过改造自然而改造了自己.
 
-人权改进了人的人格和社会地位, 使人具备了人的尊严和灵魂. 人权表明了在人与人的关系中人通过改造社会而改造了自己. 
+人权改进了人的人格和社会地位, 使人具备了人的尊严和灵魂. 人权表明了在人与人的关系中人通过改造社会而改造了自己.
 
-人权使人成为真正的人. 
+人权使人成为真正的人.
 
 什么是人？
 
 ("认识你自己", 相传是刻在古希腊德尔斐的阿波罗神庙的三句箴言之一, 也是其中最有名的一句 )
 
-耶林: 人的自然条件与道德条件. 
+耶林: 人的自然条件与道德条件.
 
-黑格尔: 法(权利)的命令是……成为人, 并尊重他人为人. 
+黑格尔: 法(权利)的命令是……成为人, 并尊重他人为人.
 
-# 人权的时代意义
+## 人权的时代意义
 
-中国: 
-- 2004年宪法修正案: 国家尊重和保障人权. 
+中国:
+
+- 2004年宪法修正案: 国家尊重和保障人权.
 - 1999年宪法修正案: 依法治国, 建设社会主义法治国家.  
 
-世界: 
+世界:
+
 - 《世界人权宣言》1948年12月10日
 国际人权日
 
-当代, 人权保障水平是判断国家发展和社会进步程度的重要标准. 
+当代, 人权保障水平是判断国家发展和社会进步程度的重要标准.
 
-人权保障不仅是社会经济发展的基本目标, 而且是其重要手段. 
+人权保障不仅是社会经济发展的基本目标, 而且是其重要手段.
 
 ## 当代中国的人权建设事业
 
 - 人权建设的成就
 - 人权保障的不足
 
-1. 由于政府权力得不到有效的制约, 所以一些政府部门就可能侵犯人权. 
-2. 在社会中仍然存在着人侵凌人、人压迫人的现象, 特别表现为大的组织、集团压迫普通劳动者或民众的现象. 
-3. 社会贫富悬殊, 社会阶层有固化的趋势. 这对弱势群体的人权保障带来不利影响. 
+1. 由于政府权力得不到有效的制约, 所以一些政府部门就可能侵犯人权.
+2. 在社会中仍然存在着人侵凌人、人压迫人的现象, 特别表现为大的组织、集团压迫普通劳动者或民众的现象.
+3. 社会贫富悬殊, 社会阶层有固化的趋势. 这对弱势群体的人权保障带来不利影响.
 
-# 本课程的培养目标
+## 本课程的培养目标
 
-1. 理解有关人权的思想和理论; 
-2. 了解有关人权保障的法律原则、制度和措施; 
-3. 学会分析人权问题; 
-4. 提高人权意识、人文素质和运用法律保护人权的能力. 
+1. 理解有关人权的思想和理论;
+2. 了解有关人权保障的法律原则、制度和措施;
+3. 学会分析人权问题;
+4. 提高人权意识、人文素质和运用法律保护人权的能力.
 
-# 学习资源
+## 学习资源
 
-## 参考书
+### 参考书
 
-- 李步云主编: 《人权法学》, 高等教育出版社2005年版(elearning有电子版); 
-- 白桂梅: 《人权法学》(第二版), 北京大学出版社2015年版; 
+- 李步云主编: 《人权法学》, 高等教育出版社2005年版(elearning有电子版);
+- 白桂梅: 《人权法学》(第二版), 北京大学出版社2015年版;
 - 甘绍平: 《人权伦理学》, 中国发展出版社2009年版
 
-## 网络资源
+### 网络资源
 
-- 老师会在复旦大学elearning网站中上传PPT和阅读材料. 
+- 老师会在复旦大学elearning网站中上传PPT和阅读材料.
 - 可以从以下网站中了解中国人权立法的进程和最近动态, 并下载有关法律文本: [中国人权](http://www.humanrights.cn/china/index).
 - 可以从以下网站中了解国际人权的进程和最近动态, 并可以下载有关条约文本: [联合国主页中文版](http://www.un.org/chinese/).  
 
-# 本课关键词
+## 本课关键词
 
-阅读: 静心阅读; 
+阅读: 静心阅读;
 
-思考: 独立思考; 
+思考: 独立思考;
 
-讨论: 学会表达和倾听; 
+讨论: 学会表达和倾听;
 
-写作: 重视论据和逻辑. 
+写作: 重视论据和逻辑.
