Update Deep Learning chapter 2: classification overview, model, learning criteria, and optimization

--- a/Deep-Learning/CH2/1_机器学习概要.md
+++ b/Deep-Learning/CH2/1_机器学习概要.md
@@ -42,26 +42,33 @@ with experience **E**.
 
 ### 分类概览
 
-- 监督学习(Supervised Learning)
-    > $$
-    > loss(D)= \min_{\theta} \frac{1}{N} \sum _{i = 1} ^{N} loss(f(X_i)Y_i)
-    > $$
-- 半监督学习(Semi-supervised Learning)
-    > $$
-    > loss(D_1, D_2)= \min_{\theta} \frac{1}{N} \sum _{i = 1} ^{N} loss(f(X_i)Y_i) + \frac{1}{M} \sum _{i = 1} ^{M} loss(Z_i, R(Z_i, X))
-    > $$
-    >
-    > 其中, $ f(.) $ 属于模型集 $ F $, $ R(Z_i, X) $ 属于task-specific函数, 表示无表记数据 $ Z_i $ 与标记数据 $ X $ 之间的关系
-- 弱监督学习(Weakly Supervised Learning)
-    > $$
-    > loss(D)= \min_{\theta} \frac{1}{N} \sum _{i = 1} ^{N} loss(f(X_i)C_i)
-    > $$
-    >
-    > 其中, $ C_i $ 表示 **粗粒度(coarse-grained)** 标记, 如: 以组给出标记
-- 无监督学习(Unsupervised Learning)
-    > - 无需任何人工标注信息
-    > - 仅一组数据, 在该其中寻找规律, 如子空间描述
-    > - **方法: 聚类、降维 (PCA) 、自编码器 (AE/VAE)**
+监督学习(Supervised Learning)
+
+$$
+loss(D)= \min_{\theta} \frac{1}{N} \sum _{i = 1} ^{N} loss(f(X_i)Y_i)
+$$
+
+半监督学习(Semi-supervised Learning)
+
+$$
+loss(D_1, D_2)= \min_{\theta} \frac{1}{N} \sum _{i = 1} ^{N} loss(f(X_i)Y_i) + \frac{1}{M} \sum _{i = 1} ^{M} loss(Z_i, R(Z_i, X))
+$$
+
+> 其中, $ f(.) $ 属于模型集 $ F $, $ R(Z_i, X) $ 属于task-specific函数, 表示无表记数据 $ Z_i $ 与标记数据 $ X $ 之间的关系
+
+弱监督学习(Weakly Supervised Learning)
+
+$$
+loss(D)= \min_{\theta} \frac{1}{N} \sum _{i = 1} ^{N} loss(f(X_i)C_i)
+$$
+
+> 其中, $ C_i $ 表示 **粗粒度(coarse-grained)** 标记, 如: 以组给出标记
+
+无监督学习(Unsupervised Learning)
+
+- 无需任何人工标注信息
+- 仅一组数据, 在该其中寻找规律, 如子空间描述
+- **方法: 聚类、降维 (PCA) 、自编码器 (AE/VAE)**
 
 ### 监督学习
 
