--- a/Deep-Learning/CH2/2_机器学习详细.md
+++ b/Deep-Learning/CH2/2_机器学习详细.md
@@ -17,21 +17,32 @@
 
 ## 机器学习的三个基本要素
 
-- 模型
-  - 线性模型
-    > $$
-    > f(x, \theta) = w ^{T}x + b
-    > $$
-  - 非线性模型
-    > $$
-    > f(x, \theta) = w ^{T} \Phi(x) + b
-    > $$
-    > - 如果 "$\Phi(x)$" 为可学习的非线性基函数, "$f(x, \theta)$" 就等价于神经网络
-- 学习准则
-  - 期望风险
-    > $$
-    > \mathcal{R}(f) = \mathbb{E} _{(x, y) \sim p(x, y)} [\mathcal{L}(f(x), y)]
-    > $$
-    > - $\mathcal{L(f(x), y)}$为损失函数
-- 优化
-  - 梯度下降
+### 模型
+
+线性模型
+
+$$
+f(x, \theta) = w ^{T}x + b
+$$
+
+非线性模型
+
+$$
+f(x, \theta) = w ^{T} \Phi(x) + b
+$$
+
+> 如果 "$\Phi(x)$" 为可学习的非线性基函数, "$f(x, \theta)$" 就等价于神经网络
+
+### 学习准则
+
+期望风险
+
+$$
+\mathcal{R}(f) = \mathbb{E} _{(x, y) \sim p(x, y)} [\mathcal{L}(f(x), y)]
+$$
+
+> $\mathcal{L(f(x), y)}$为损失函数
+
+### 优化
+
+梯度下降
