--- a/Deep-Learning/CH2/3_学习准则.md
+++ b/Deep-Learning/CH2/3_学习准则.md
@@ -31,21 +31,26 @@ $$
 $$
 
 Hinge 损失函数(Hinge Loss)
+
 $$
 \mathcal{L}(y, f(x, \theta)) = \max(0, 1 - yf(x; \theta))
 $$
 
 ### 风险最小化准则
 
-- 期望风险未知, 通过经验风险 (Empirical Risk) 来近似, 即训练集的平均损失
-  $$
-  \mathcal{R} _{\mathcal{D}} ^{emp}(f) = \frac{1}{N} \sum _{i = 1} ^{N} \mathcal{L}(y^{(n)} f(x^{(n)}; \theta))
-  $$
-- 经验风险最小化
-- 在选择合适的风险函数后, 我们寻找一个参数 $\theta _{*}$, 使得经验风险函数最小化
-  $$
-  \theta ^{*} = \arg \min _{\theta} \mathcal{R} _{\mathcal{D}} ^{emp}(\theta)
-  $$
+期望风险未知, 通过经验风险 (Empirical Risk) 来近似, 即训练集的平均损失
+
+$$
+\mathcal{R} _{\mathcal{D}} ^{emp}(f) = \frac{1}{N} \sum _{i = 1} ^{N} \mathcal{L}(y^{(n)} f(x^{(n)}; \theta))
+$$
+
+经验风险最小化
+
+在选择合适的风险函数后, 我们寻找一个参数 $\theta _{*}$, 使得经验风险函数最小化
+
+$$
+\theta ^{*} = \arg \min _{\theta} \mathcal{R} _{\mathcal{D}} ^{emp}(\theta)
+$$
 
 ## 最优化问题
 
@@ -70,13 +75,17 @@ $$
 
 #### 随机梯度下降法(Stochastic Gradient Descent, SGD)
 
-- 如果目标函数是整个训练集的风险函数(批量梯度下降), 计算开销很大.
-- 为了减少每次迭代的计算复杂度, 可以在每次迭代的时候只采样一个样本, 计算这个样本损失的梯度并更新参数, 即随机梯度下降. 当经过足够次数迭代, 随机梯度下降也可以收敛到局部最优解.
-  $$
-  \theta _{t + 1} = \theta _{t} - \alpha \frac{\partial \mathcal{L}(\theta _{t}; x^{(i)}, y^{(i)})}{\partial \theta}
-  $$
-- 小批量随机梯度下降法(mini - batch gradient descent)是批量梯度下降和随机梯度下降的折中, 每次选取一小部分训练样本来进行梯度下降计算. 既兼顾随机梯度下降的优点, 也提高了训练效率.
-- 实际应用中, 小批量随机梯度下降法, 逐渐成为大规模机器学习的主流优化算法.
+如果目标函数是整个训练集的风险函数(批量梯度下降), 计算开销很大.
+
+为了减少每次迭代的计算复杂度, 可以在每次迭代的时候只采样一个样本, 计算这个样本损失的梯度并更新参数, 即随机梯度下降. 当经过足够次数迭代, 随机梯度下降也可以收敛到局部最优解.
+
+$$
+\theta _{t + 1} = \theta _{t} - \alpha \frac{\partial \mathcal{L}(\theta _{t}; x^{(i)}, y^{(i)})}{\partial \theta}
+$$
+
+小批量随机梯度下降法(mini - batch gradient descent)是批量梯度下降和随机梯度下降的折中, 每次选取一小部分训练样本来进行梯度下降计算. 既兼顾随机梯度下降的优点, 也提高了训练效率.
+
+实际应用中, 小批量随机梯度下降法, 逐渐成为大规模机器学习的主流优化算法.
 
 > 流程
 >
@@ -104,18 +113,21 @@ $$
 
 ### 泛化错误
 
-- 期望预期
-  $$
-  \mathcal{R}(f) = \mathbb{E} _{(x, y) \sim p(x, y)} [\mathcal{L}(f(x), y)]
-  $$
-  > - 真实分布:
-  > ![真实分布](../img/ch2_2.png)
-- 经验风险
-  $$
-  \mathcal{R} _{\mathcal{D}} ^{emp}(f) = \frac{1}{N} \sum _{i = 1} ^{N} \mathcal{L}(y^{(n)} f(x^{(n)}; \theta))
-  $$
-  > - 训练集分布:
-  > ![训练集分布](../img/ch2_3.png)
+期望预期
+$$
+\mathcal{R}(f) = \mathbb{E} _{(x, y) \sim p(x, y)} [\mathcal{L}(f(x), y)]
+$$
+
+> - 真实分布:
+> ![真实分布](../img/ch2_2.png)
+
+经验风险
+$$
+\mathcal{R} _{\mathcal{D}} ^{emp}(f) = \frac{1}{N} \sum _{i = 1} ^{N} \mathcal{L}(y^{(n)} f(x^{(n)}; \theta))
+$$
+
+> - 训练集分布:
+> ![训练集分布](../img/ch2_3.png)
 
 如何减少泛化错误？
 > **正则化!!**
