github latex preview capability

--- a/Deep-Learning/CH2/4_参数学习.md
+++ b/Deep-Learning/CH2/4_参数学习.md
@@ -7,25 +7,30 @@
 
 ## 最小二乘法(Least Square Method, LSM)
 
-- 使用平方损失函数 MSE 作为经验风险最小化的损失
-  > $$
-  > \begin{aligned}
-  > \mathcal{R}(w) &= \sum _{n = 1} ^{N} \mathcal{L}(y^{(n)}, f(x^{(n)}; w)) \\
-  > &= \frac{1}{2} \sum _{n = 1} ^{N} (y^{(n)} - w ^{T}x^{(n)}) ^{2} \\
-  > &= \frac{1}{2} || y - X ^{T}w || ^{2}
-  \end{aligned}
-  > $$
-- 其中 $y$ 是所有样本标签构成的列向量，$X$ 是所有输入样本特征构成的矩阵，损失对参数 $w$ 求偏导得
-  > $$
-  > \begin{aligned}
-  > \frac{\partial \mathcal{R}(w)}{\partial w} &= \frac{1}{2} \frac{\partial || y - X ^{T}w || ^{2}}{\partial w} \\
-  > &= - X(y - X ^{T}w)
-  > \end{aligned}
-  > $$
-- 令 $\frac{\partial}{\partial w} \mathcal{R} (w)$, 得到最优的参数 $w ^{*}$ 为
-  > $$
-  > w ^{*} = (X X ^{T}) ^{-1} X y
-  > $$
+使用平方损失函数 MSE 作为经验风险最小化的损失
+
+$$
+\begin{aligned}
+\mathcal{R}(w) &= \sum _{n = 1} ^{N} \mathcal{L}(y^{(n)}, f(x^{(n)}; w)) \\
+&= \frac{1}{2} \sum _{n = 1} ^{N} (y^{(n)} - w ^{T}x^{(n)}) ^{2} \\
+&= \frac{1}{2} || y - X ^{T}w || ^{2}
+\end{aligned}
+$$
+
+其中 $y$ 是所有样本标签构成的列向量，$X$ 是所有输入样本特征构成的矩阵，损失对参数 $w$ 求偏导得
+
+$$
+\begin{aligned}
+\frac{\partial \mathcal{R}(w)}{\partial w} &= \frac{1}{2} \frac{\partial || y - X ^{T}w || ^{2}}{\partial w} \\
+&= - X(y - X ^{T}w)
+\end{aligned}
+$$
+
+令 $\frac{\partial}{\partial w} \mathcal{R} (w)$, 得到最优的参数 $w ^{*}$ 为
+
+> $$
+> w ^{*} = (X X ^{T}) ^{-1} X y
+> $$
 
 ## 结构风险最小化(岭回归, Ridge Regression)
 
